# meson-template

./: meson.build  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: main.cpp
